--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/alfahadiqbal/Node-with-ts#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
