--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Open source node project with typescript",
   "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
